<resources>
    <string name="app_name">Task6D</string>
    <string name="Home">Home</string>
    <string name="Account">Account</string>
    <string name="Myorders">My Orders</string>
    <string name="drop_off_location_8_11_bryants_road">Drop off location: 8/11 bryants road</string>
    <string name="approx_fare_10">Approx fare 10$</string>
    <string name="approx_travel_time_60_min">Approx travel time: 60 min</string>
    <string name="call_now">Call Now</string>
    <string name="book_now">Book Now</string>
    <string name="pick_up_location_mulgrave">Pick up location: mulgrave</string>
    <string-array name="news_full_text">
        <item>election</item>
        <item>hiking</item>
        <item>house</item>
        <item>oldPeople</item>
        <item>railway</item>
        <item>traffic</item>
        <item>vape</item>
        <item>wallet</item>
        <item>wash</item>
        <item>watch</item>
    </string-array>
    <string-array name="news_three_letter_text">
        <item>election</item>
        <item>hiking</item>
        <item>house</item>
        <item>oldPeople</item>
        <item>railway</item>
        <item>traffic</item>
        <item>vape</item>
        <item>wallet</item>
        <item>wash</item>
        <item>watch</item>
    </string-array>
    <string-array name="news_one_letter">
        <item>election</item>
        <item>hiking</item>
        <item>house</item>
        <item>oldPeople</item>
        <item>railway</item>
        <item>traffic</item>
        <item>vape</item>
        <item>wallet</item>
        <item>wash</item>
        <item>watch</item>
    </string-array>


</resources>