<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_up_location_mulgrave"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:text="@string/drop_off_location_8_11_bryants_road"
        android:textSize="20sp" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="347dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:text="@string/approx_fare_10"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:text="@string/approx_travel_time_60_min"
        android:textSize="20sp" />

    <Button
        android:id="@+id/book"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:text="@string/book_now"
        android:textSize="20sp" />

    <Button
        android:id="@+id/call"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:text="@string/call_now"
        android:textSize="20sp" />

</LinearLayout>
